# contours2heightmap

./: Cargo.toml  README.md  plot.py  universal.csv
.github/workflows/: check_and_test.yml  release.yml
src/: contour_line.rs  contour_processing.rs  display.rs  draw.rs  font.rs  heightmap.rs  heigtmap.rs  lib.rs  main.rs
