[package]
name = "contours2heightmap"
version = "0.1.0"
edition = "2024"
default-run = "c2h"
authors = ["Bowen951209 <bowen951209@gmail.com>"]
description = "A CLI tool to convert contour line bitmap images into heightmaps."
license = "MIT"
repository = "https://github.com/Bowen951209/contours2heightmap"
readme = "README.md"
keywords = ["contour", "heightmap", "cli", "image", "topography"]
categories = ["command-line-utilities", "graphics", "multimedia::images", "science::geo"]
exclude = [
    "test_assets/*",
    "gallery/*",
]

[[bin]]
name = "c2h"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
imageproc = "0.25.0"
ab_glyph = "0.2.29"
indicatif = {version = "0.18.0", features = ["rayon"]}
rayon = "1.10.0"
rstar = "0.12.2"
ordered-float = "5.0.0"
colorous = "1.0.16"
log = "0.4"
pretty_env_logger = "0.5"
